<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".lugares.ObservatorioFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20sp"
                android:layout_marginBottom="20sp"
                android:layout_marginEnd="20sp"
                android:textSize="30sp"
                android:text="@string/tit_paramo"
                android:textStyle="bold"
                android:textColor="@color/azulnegro"
                android:fontFamily="@font/bold"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_margin="20sp"
                android:background="@drawable/paramo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:textSize="15sp"
                android:text="@string/paramo"
                android:textColor="#020202"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:layout_marginStart="20sp"
                android:layout_marginBottom="20sp"
                android:layout_marginEnd="20sp"
                android:textSize="30sp"
                android:text="@string/peñonIsco"
                android:textStyle="bold"
                android:textColor="@color/azulnegro"
                android:fontFamily="@font/bold"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_height="300sp"
                android:src="@drawable/penon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:textSize="15sp"
                android:text="@string/peñon"
                android:textColor="#020202"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:orientation="vertical"/>

        </LinearLayout>





    </ScrollView>
</LinearLayout>