<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/guaytaraHodteria"
    android:layout_height="match_parent"
    tools:context=".alojamiento.HosteriaGuaytara">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/im3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:textStyle="bold"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:textColor="@color/colorPrimary"/>
            <RatingBar
                android:id="@+id/calificacion"
                android:theme="@style/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:numStars="5"
                android:rating="4.5"
                android:scaleX="0.5"
                android:scaleY="0.5" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textStyle="bold"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:textColor="@color/colorPrimary"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@color/white"
                android:layout_margin="10dp"
                android:text="(02) 233-2426"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/email"/>
            <Button
                android:layout_width="230dp"
                android:layout_height="30dp"
                android:textAllCaps="false"
                android:background="@color/white"
                android:layout_margin="10dp"
                android:text="informacionguaytara@gmail.com"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/sitios"/>

            <Button
                android:layout_width="230dp"
                android:layout_height="30dp"
                android:textAllCaps="false"
                android:background="@color/white"
                android:layout_margin="10dp"
                android:text="www.hosteriaguaytara.com"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/galeria"
                android:textStyle="bold"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:textColor="@color/colorPrimary"/>
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10sp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/im1"
                        android:background="@drawable/im5"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginRight="7dp"/>

                    <ImageView
                        android:id="@+id/im2"
                        android:background="@drawable/im1"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_toRightOf="@id/im1"
                        android:layout_marginRight="7dp"/>

                    <ImageView
                        android:id="@+id/im3"
                        android:background="@drawable/im2"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_toRightOf="@id/im2"
                        android:layout_marginRight="7dp"/>

                    <ImageView
                        android:id="@+id/im4"
                        android:background="@drawable/im3"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_toRightOf="@id/im3"
                        android:layout_marginRight="7dp"/>

                    <ImageView
                        android:id="@+id/im5"
                        android:layout_width="200dp"
                        android:background="@drawable/im4"
                        android:layout_height="200dp"
                        android:layout_toRightOf="@id/im4"
                        android:layout_marginRight="7dp"/>

                </RelativeLayout>

            </HorizontalScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mapa"
                    android:textStyle="bold"
                    android:layout_marginBottom="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="20sp"
                    android:textColor="@color/colorPrimary"/>

                <com.google.android.gms.maps.MapView
                    android:layout_marginTop="20sp"
                    android:id="@+id/mGuaytara"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical"/>


        </LinearLayout>
    </ScrollView>

</FrameLayout>